--- a/projects/client/public/index.html
+++ b/projects/client/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/t10logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Toten</title>
   </head>
