--- a/projects/client/public/index.html
+++ b/projects/client/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Multiwarehose E-Commerce Web App" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/t10logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Toten</title>
